# fedllm-sci4

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
configs/data/: edgeiiot.json  snli.json
configs/experiments/: edgeiiot_fl_spectra_dp.json
data/: README.md
data/processed/edgeiiot/: file_manifest.json  label_inventory.json  prompt_smoke_samples.jsonl  selected_ml_clients_seed20260531_K10_alpha0.5.json  source_split_seed20260531.json
data/processed/snli/: manifest.json
docs/superpowers/plans/: 2026-05-31-data-preparation.md
docs/superpowers/specs/: 2026-05-31-spectra-dp-fedcore-design.md
scripts/: prepare_datasets.py  run_fedsb_snli_central_private.sh  run_fedsb_snli_fed_private.sh
src/fedllm_data/: __init__.py  edgeiiot.py  labels.py  prompts.py  snli.py
src/spectra/: __init__.py  adapter.py  fl.py  metrics.py  privacy.py
tests/: test_edgeiiot_label_inventory.py  test_edgeiiot_manifest.py  test_edgeiiot_splits.py  test_labels.py  test_manifest_paths.py  test_prepare_datasets_cli.py  test_prompts.py  test_selected_splits.py  test_snli_manifest.py  test_spectra_adapter.py  test_spectra_basis.py  test_spectra_metrics.py  test_spectra_privacy_fl_metrics.py
